@@ -1,6 +1,5 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
-Encoding=UTF-8
 _Name=Brightness plugin
 _Comment=Control your LCD brightness
 Icon=gpm-brightness-lcd
