@@ -1,6 +1,5 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
-Encoding=UTF-8
 _Name=Inhibit plugin
 _Comment=Inhibit automatic power savings
 Icon=gnome-inhibit-applet
