@@ -1,6 +1,5 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 _Name=Xfce 4 Power Manager
 _GenericName=Power Manager
 _Comment=Settings for the Xfce 4 Power Manager
