@@ -7,6 +7,9 @@
         <annotation name="org.freedesktop.DBus.GLib.ClientCSymbol"
                     value="xfpm_engine_dbus_client"/>   
 
+    <method name="Shutdown">
+    </method>
+    
     <method name="Hibernate">
     </method>
     
