@@ -1,4 +1,7 @@
 
+2009-04-20  9:22 Ali aliov@xfce.org 
+	 * : Remove all encoding keys from the desktop file thanks to Yves for pointing out
+
 2009-04-19 12:57 Ali aliov@xfce.org 
 	 * : Fix brightness level settings issue on ibook
 
